# demopinvoke

./: .gitignore  CMakeLists.txt  README.md  demopinvoke.sln
.github/workflows/: buildnativelibrary.yml
pinvoke.consoleapp/: Program.cs  pinvoke.consoleapp.csproj
pinvoke.consoleapp/Model/: IPerson.cs  Person.cs
pinvoke.consoleapp/Native/: INativeWrapper.cs  LibraryPath.cs  NativeDelegates.cs  NativeExtensionClass.cs  NativeWrapper.cs  StructBox.cs
pinvoke.consoleapp/Properties/: launchSettings.json
pinvoke.consoleapp/Services/: IMainService.cs  MainService.cs
pinvoke.library.managed/: API.cpp  API.h  Dummy.cpp  Hoge.h  ILogger.h  Logger.cpp  Logger.h  Logger_api.cpp  Logger_api.h  Person.cpp  Person.h  dllmain.cpp  pch.h  pinvoke.library.managed.def  pinvoke.library.managed.vcxproj  pinvoke.library.managed.vcxproj.filters
pinvoke.nativewrapperlibrary/: DependencyInjection.cs  pinvoke.nativewrapperlibrary.csproj
pinvoke.nativewrapperlibrary/Model/: IPerson.cs  Person.cs
pinvoke.nativewrapperlibrary/Native/: INativeWrapper.cs  NativeDelegates.cs  NativeExtensionClass.cs  NativeWrapper.cs  StructBox.cs
pinvoke.wpfuiapp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  appsettings.json  pinvoke - Backup.wpfuiapp.csproj  pinvoke.wpfuiapp.csproj
pinvoke.wpfuiapp/Logger/: CustomLoggerDataExtractor.cs  CustomLoggerProvider.cs  CustomLoggerProviderExtensions.cs  LoggerFileOptions.cs
pinvoke.wpfuiapp/Services/: MainService.cs
pinvoke.wpfuiapp/ViewModel/: MainViewModel.cs
